Update bazel to use java 21.
Required also updating `rules_java` to 7.12.1 to get access to Java 21.

RELNOTES=N/A
PiperOrigin-RevId: 682556297